<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hotkeys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#04045a"
    tools:context="com.example.jj.knx.HotkeysActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Lamps" />

    <Button
        android:id="@+id/btn_LightsOn"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_LightsOn" />

    <Button
        android:id="@+id/btn_LightsOff"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_LightsOff" />

    <Button
    android:id="@+id/btn_BackHotkeys"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableLeft="@drawable/icon_back"
    android:background="@android:color/transparent" />

</LinearLayout>